# YOLOv6

./: Dockerfile_tensorrt_x86  README.md  README_tensorrt.md  human_yolov6_trainer_bash.sh  requirements.txt
configs/: yolov6s_finetune.py
data/: human.yaml
deploy/ONNX/: export_onnx.py
deploy/TensorRT/: onnx_to_trt.py
deploy/TensorRT/yolov6_edgesignal/: CMakeLists.txt  main.cpp  yolov6_class_edgesignal.cpp  yolov6_class_edgesignal.hpp
tools/: train.py
tools/data_utils/: ann_on_image.py  collect_all_folders.py  empty_txt_file.py  fix_imgs.py  select_random_samples.py  train_test_split.py
tools/data_utils/dataset_specific/: human_crowd_cleaning.py  ptracker_image_txt_generation.py
tools/data_utils/trash/: remove_similar_cloths.py
yolov6/core/: engine.py  evaler.py
yolov6/utils/: checkpoint.py  events.py
